.kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: url-shortener-api
  name: url-shortener-api-http
  namespace: url-shortener
spec:
  type: ClusterIP
  ports:
    - name: api-http
      port: 7000
      targetPort: url-shortener-api-http
  selector:
    app: url-shortener-api
