.kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: url-shortener-api
  namespace: url-shortener
spec:
  rules:
    - host: ${HOST}
      http:
        paths:
          - backend:
              service:
                name: url-shortener-api-http
                port:
                  number: 7000
            path: /
            pathType: Prefix
